# ghost-in-a-shell

./: Cargo.toml  PLAN.md  README.md  shaping.md  spike-c1-2-workspace-model.md  spike-r4-ghostty-native.md  spike-x3-raycast-launcher.md  spike-x5-ghostty-restore-fidelity.md  spike-x6-split-topology-inference.md
docs/: README.md  getting-started.md  shaping.md  spike-x3-minimal-companion-ui.md  spike-x5-ghostty-restore-fidelity.md  spike-x6-split-topology-inference.md  spike-x7-in-ghostty-save.md
src/: cli.rs  ghostty_adapter.rs  lib.rs  main.rs  model.rs  recovery.rs  store.rs  tui.rs
