[package]
name = "ghost-in-a-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { version = "1.1.9", features = ["serde1"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.20.0"
